[FIX] mail: improve user mention highlight visibility
This commit fixes an issue about the highlight behind a mentioned
username within the chatter not being that visible.

This issue is especially noticeable in dark mode or when you send
a direct message, since the background is darker.

To fix this issue, we use the `$o-component-active-bg` variable
in addition to the default text color of the link.

task-3582263

--- a/addons/mail/static/src/core/common/message.scss
+++ b/addons/mail/static/src/core/common/message.scss
@@ -32,7 +32,7 @@
     a.o_mail_redirect {
         padding: map-get($spacers, 1);
         border-radius: $border-radius;
-        background: rgba($primary, .2);
+        background: var(--MailRedirect-background, rgba($o-brand-primary, .2));
     }
 }
 
